<resources>
    <string name="app_name">PetBooking</string>
    <string name="title_activity_base">BaseActivity</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="main_nav_description">Главная</string>
    <string name="requests_nav_description">Заявки</string>
    <string name="favorites_nav_description">Избранное</string>
    <string name="profile_nav_description">Профиль</string>

    <string name="retry_request">Повторить заявку</string>
    <string name="pets">Питомцы</string>
    <string name="dates">Даты</string>
    <string name="status">Статус:</string>
    <string name="request_date_header">Заявка от %s</string>
    <string name="pet_marker_text"><![CDATA[&bull; %s]]></string>
    <string name="cancel_status">завершена</string>
    <string name="active_status">ожидает отклика</string>
    <string name="has_feedbacks_status">есть отклики</string>
    <string name="active">Активные</string>
    <string name="cancel">Завершенные</string>
</resources>