<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2019, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/main"
        android:icon="@drawable/main_tab_icon"
        android:contentDescription="@string/main_nav_description"
        android:title="@string/main_nav_description" />
    <item
        android:id="@+id/requests"
        android:icon="@drawable/reguests_tab_icon"
        android:contentDescription="@string/requests_nav_description"
        android:title="@string/requests_nav_description" />
    <item
        android:id="@+id/favorites"
        android:icon="@drawable/favorites_tab_icon"
        android:contentDescription="@string/favorites_nav_description"
        android:title="@string/favorites_nav_description" />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/profile_tab_icon"
        android:contentDescription="@string/profile_nav_description"
        android:title="@string/profile_nav_description" />

</menu>
