<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/title_constraint"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:elevation="4dp"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/request_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:maxLines="1"
            android:textColor="@color/primaryText"
            android:textSize="16sp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@id/retry_request"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Заявка от 10.08.2022" />

        <TextView
            android:id="@+id/retry_request"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:gravity="end"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/request_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/request_date"
            app:layout_constraintBottom_toBottomOf="@id/request_date"
            android:text="@string/retry_request" />

        <TextView
            android:id="@+id/pets_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:textColor="@color/additionalText"
            android:textSize="12sp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/request_date"
            android:text="@string/pets" />

        <TextView
            android:id="@+id/pets_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/primaryText"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/pets_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/dates_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:textColor="@color/additionalText"
            android:textSize="12sp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pets_list"
            android:text="@string/dates" />

        <TextView
            android:id="@+id/dates"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:textColor="@color/primaryText"
            android:textSize="14sp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dates_header"
            tools:text="25.01.2022  — 30.01.2022" />
        
        <View
            android:id="@+id/status_back"
            android:layout_width="0dp"
            android:layout_height="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dates"
            android:layout_marginTop="16dp"
            tools:background="@color/gray"
            />

        <TextView
            android:id="@+id/status_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:textColor="@color/primaryText"
            android:textSize="14sp"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toStartOf="@id/status"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/status_back"
            app:layout_constraintBottom_toBottomOf="@id/status_back"
            android:text="@string/status" />

        <TextView
            android:id="@+id/status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:textColor="@color/primaryText"
            android:textSize="14sp"
            android:gravity="end"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/status_header"
            app:layout_constraintTop_toTopOf="@id/status_back"
            app:layout_constraintBottom_toBottomOf="@id/status_back"
            tools:text="завершена" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>